<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitleAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_producy"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/labelProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_name_product"
        app:layout_constraintEnd_toStartOf="@+id/etProductName"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleAdd" />

    <TextView
        android:id="@+id/labelAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_amount"
        app:layout_constraintStart_toStartOf="@+id/labelProductName"
        app:layout_constraintTop_toBottomOf="@+id/labelProductName" />

    <TextView
        android:id="@+id/labelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_price"
        app:layout_constraintStart_toStartOf="@+id/labelAmount"
        app:layout_constraintTop_toBottomOf="@+id/labelAmount" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_cancel"
        app:layout_constraintEnd_toStartOf="@+id/buttonOk"
        app:layout_constraintTop_toBottomOf="@+id/etPrice" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonCancel" />

    <EditText
        android:id="@+id/etProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_product_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/tvTitleAdd"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleAdd" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/etProductName"
        app:layout_constraintTop_toBottomOf="@+id/etProductName" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_price"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/etAmount"
        app:layout_constraintTop_toBottomOf="@+id/etAmount" />

</androidx.constraintlayout.widget.ConstraintLayout>